# PROMOS

./: .gitignore  CMakeLists.txt  NOTAS.txt  README.md  requirements.txt
R/: analize_evolution.R  config_example.R  data_understanding.R  datasets.R  evolution.R  evolution_comparison.R  evolution_samples.R  models.R  models_comparison.R  models_v2.R  nnet.R  numeric.R  other_methods.R  predictions.R  prep.R  processes.R  sampling.R  temp.R  test_auc.R  time.R  util.R
cfg/: bloat.cfg  bloat_fit_popmax.cfg  bloat_fit_popmax_predtime.cfg  bloat_fit_step.cfg  bloat_fit_step_predtime.cfg  bloat_mut_con.cfg  bloat_mut_predtime.cfg  bloat_mut_time.cfg  bloat_online.cfg  bloat_online_idf.cfg  encoder.cfg  encoder_factor.cfg  encoder_idf.cfg  encoder_idf_keep_first.cfg  encoder_pcp.cfg  encoder_pcp_05.cfg  encoder_raw.cfg
draw.io/: sliding_window.xml
examples/: neat.py  params.py
examples/archive/: NoveltySearch.py  TestCondTraits.py  TestESHyperNEAT_xor.py  TestHyperNEAT_xor.py  TestNEAT_xor.py  TestTraits.py  ball_keeper.py  viz.py
irace/: analyser.R  forbidden.txt  initial_config.txt  param-writer.sh  parameters.txt  scenario.txt  target-runner.sh  test_instances.txt  train_instances.txt
irace/hyperneat_hyperparams/: forbidden.txt  initial_config.txt  parameters.txt  scenario.txt  target-runner.sh  test_instances.txt  train_instances.txt
irace/neat_hyperparams/: param-writer.sh  scenario.txt  target-runner.sh
irace/output/: analyser.R  irace.Rdata  irace_output.txt  ttest.txt
irace/samplesize/: initial_config.txt  parameters.txt  scenario.txt  target-runner.sh  test_instances.txt  train_instances.txt
irace/substrate/: initial_config.txt  parameters.txt  scenario.txt  target-runner.sh  test_instances.txt  train_instances.txt
params/: bloat.cfg  bloat.ini  bloat_fit.cfg  bloat_fit_popmax.cfg  bloat_fit_step.cfg  bloat_mut.cfg  bloat_mut_con.cfg  bloat_mut_neurons.cfg  bloat_mut_time.cfg  flat.txt  hyperneat.txt  irace1.txt  irace2.txt  irace3.txt  irace4.txt  irace5.txt  irace6.txt  neat0.txt  neat2.txt  neat_0.txt  neat_balanced.txt  neat_online.txt
scripts/: best_gdneat_idf.sh  best_hneat_idf.sh  best_hneat_raw.sh  best_neat_idf.sh  best_neat_idf_plot.sh  best_neat_raw.sh  best_neat_raw_plot.sh  best_neatp_idf.sh  best_neatp_raw.sh  best_nl_idf_plot.sh  best_nl_raw_plot.sh  best_sw_hneat_idf.sh  best_sw_neat_idf.sh  best_sw_neat_pcp_05.sh  best_sw_neat_raw.sh  best_sw_neatp_idf.sh  best_sw_neatp_raw.sh  hneat_best_pcp.sh  hneat_best_raw.sh  hneat_test_idf_plot.sh  hneat_test_raw_plot.sh  neat_best_raw.sh  neat_online_idf.sh  neat_sampling.sh  neat_sw_best_raw.sh  neat_sw_test_raw.sh  neat_test_idf_plot.sh  neat_test_raw.sh  neat_test_raw_plot.sh  nl_best_idf.sh  nl_best_raw.sh  nl_test_idf.sh  nl_test_idf_plot.sh  nl_test_raw_plot.sh  run_gdneat_2weeks_best_idf.sh  run_gdneat_2weeks_best_pcp.sh  run_hneat_2weeks_best_idf.sh  run_hneat_2weeks_best_pcp.sh  run_hneat_2weeks_best_raw.sh  run_hneat_2weeks_test_idf.sh  (+83 more)
src/: Genome.h  PythonBindings.h  evaluators.py  islands.py  neat.py  params.py  util.py  viz.py
src/MultiNEAT/: Assert.h  Genes.h  Genome.cpp  Main.cpp  PhenotypeBehavior.cpp  PhenotypeBehavior.h  Population.cpp  PythonBindings.cpp  PythonBindings.h  Species.cpp  Species.h
src/archive/: NoveltySearch.py  TestCondTraits.py  TestESHyperNEAT_xor.py  TestHyperNEAT_xor.py  TestNEAT_xor.py  TestTraits.py  ball_keeper.py
src/cpp/: Main.cpp  NetworkTest.cpp
src/py/: backprop.py  bloat.py  collector.py  data.py  encoder.py  evaluator.py  evaluators.py  evolver.py  genome_writer.py  islands.py  online.py  params.py  predict.py  sliding_window.py  substrate.py  summary_to_csv.py  util.py  viz.py
src/python/: data.py  evaluators.py  evolver.py  islands.py  neat.py  params.py  substrate.py  util.py  viz.py
src/r/: extract.R  prep.R  temp2.R  transform.R
stats/2weeks/: windows.csv
stats/bloat/: summary.csv
uml/: PROMOS.vpp
(+61 files in other folders)
